--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -2,7 +2,7 @@
     <div class="container text-center">
         <span class="text-muted">
             © <script>document.write(new Date().getFullYear())</script>
-            Student Management System. By EhiTech🎉 |
+            Student Management System. By EHITech🎉 |
             <span class="d-none d-md-inline">All Rights Reserved.</span>
         </span>
     </div>
