--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -17,7 +17,7 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="/">
-                        <i class="fas fa-home me-1"></i> Cam
+                        <i class="fas fa-camera me-1"></i> Cam
                     </a>
                 </li>
                 <li class="nav-item">
@@ -38,11 +38,11 @@
             </ul>
 
             <!-- Optional Login/Logout Button -->
-            <div class="ms-lg-3">
-                <a href="/login" class="btn btn-outline-primary">
-                    <i class="fas fa-sign-in-alt me-1"></i> Login
-                </a>
-            </div>
+<!--            <div class="ms-lg-3">-->
+<!--                <a href="/login" class="btn btn-outline-primary">-->
+<!--                    <i class="fas fa-sign-in-alt me-1"></i> Login-->
+<!--                </a>-->
+<!--            </div>-->
         </div>
     </div>
 </nav>
